--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3250,7 +3250,7 @@ input[type=search] {
 .radio input[type=radio],
 .radio-inline input[type=radio] {
     position: absolute;
-    margin-top: 4px\9;
+    margin-top: 4px;
     margin-left: -20px
 }
 
@@ -6083,12 +6083,12 @@ a.thumbnail:hover {
 }
 
 .alert>p+p {
-    margin-top: 5px
+    margin-top: 5px;
 }
 
 .alert-dismissable,
 .alert-dismissible {
-    padding-right: 35px
+    padding-right: 35px;
 }
 
 .alert-dismissable .close,
@@ -6336,7 +6336,7 @@ a.thumbnail:hover {
     padding: 10px 15px;
     margin-bottom: -1px;
     background-color: #fff;
-    border: 1px solid #ddd
+    border: 1px solid #ddd;
 }
 
 .list-group-item:first-child {
@@ -7191,11 +7191,11 @@ button.close {
 @media (min-width:768px) {
     .modal-dialog {
         width: 600px;
-        margin: 30px auto
+        margin: 30px auto;
     }
     .modal-content {
         -webkit-box-shadow: 0 5px 15px rgba(0, 0, 0, .5);
-        box-shadow: 0 5px 15px rgba(0, 0, 0, .5)
+        box-shadow: 0 5px 15px rgba(0, 0, 0, .5);
     }
     .modal-sm {
         width: 300px
@@ -7682,17 +7682,17 @@ button.close {
     margin: 1px;
     text-indent: -999px;
     cursor: pointer;
-    background-color: #000\9;
+    background-color: #000;
     background-color: rgba(0, 0, 0, 0);
     border: 1px solid #fff;
-    border-radius: 10px
+    border-radius: 10px;
 }
 
 .carousel-indicators .active {
     width: 12px;
     height: 12px;
     margin: 0;
-    background-color: #fff
+    background-color: #fff;
 }
 
 .carousel-caption {
