--- a/style.css
+++ b/style.css
@@ -229,6 +229,9 @@ a:hover {
 .l-bloc h6 a,
 .l-bloc p a {
     color: rgba(0, 0, 0, .6);
+    text-decoration: none;
+    font-size: larger;
+    font-weight: bold;
 }
 
 .d-bloc .panel .a-btn:hover,
@@ -314,9 +317,9 @@ a:hover {
 
 .navbar .nav {
     padding-top: 2px;
-    margin-right: -16px;
     float: right;
     z-index: 1;
+    list-style-type: none;
 }
 
 .nav > li {
@@ -359,6 +362,14 @@ a:hover {
     z-index: 2;
 }
 
+.row {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.row.contact {
+    flex-direction: column;
+}
 @media (min-width: 768px) {
     .site-navigation {
         position: absolute;
@@ -1019,6 +1030,31 @@ h4 {
     .blocsapp-device-iphone5 img {
         width: 180px;
         height: 320px;
+    }
+
+    .row.form {
+        flex-direction: column;
+    }
+
+    .row.voffset-lg.med-width-whitespace {
+        flex-direction: column;
+    }
+    
+    h2.mg-md.text-center.tc-white {
+        font-size: 20px;
+    }
+
+    .row.tight-width-whitespace.portfolio-row {
+        flex-direction: column;
+    }
+
+    a[data-lightbox] {
+        display: grid;
+        place-items: center;
+    }
+    .row.contact {
+        flex-direction: column;
+
     }
 }
 
